change the drop report event , to add some translation and the drop link

--- a/Resources/translations/icap_dropzone.en.yml
+++ b/Resources/translations/icap_dropzone.en.yml
@@ -316,4 +316,7 @@ Grades were recalculated: "Grades were recalculated"
 Just save: "Save and don't recalculate"
 Save and recalculate all grade: "Save and recalculate all grade"
 You will be abble to do it later if you want: "You will be abble to do it later if you want"
+copy: "copy"
+Report reason: "Report reason"
+Reported copy : "Reported copy"
 Your modifications will only affect new corrections. For older, do you want to apply modification and recalculate grades: "Your modifications will only affect new corrections. For older, do you want to apply modification and recalculate grades ?"
