--- a/Resources/translations/icap_dropzone.fr.yml
+++ b/Resources/translations/icap_dropzone.fr.yml
@@ -315,4 +315,7 @@ Grades were recalculated: "Les notes ont été recalculées"
 Just save: "Sauvegarder sans recalculer"
 Save and recalculate all grade: "Sauvegarder et recalculer les notes"
 You will be abble to do it later if you want: "note : Vous avez la possibilité de le faire plus tard"
+copy: "copie"
+Report reason: "Raison"
+Reported copy : "Copie signalée"
 Your modifications will only affect new corrections. For older, do you want to apply modification and recalculate grades: "Vos modifications vont affecter seulement les nouvelles corrections. Voulez vous appliquer ces modifications aux corrections déjà créées  et recalculer les notes déjà données ?"
