correct #75. change text in buttons to autoclose drops to make it more understandable.

--- a/Resources/translations/icap_dropzone.en.yml
+++ b/Resources/translations/icap_dropzone.en.yml
@@ -320,3 +320,5 @@ copy: "copy"
 Report reason: "Report reason"
 Reported copy : "Reported copy"
 Your modifications will only affect new corrections. For older, do you want to apply modification and recalculate grades: "Your modifications will only affect new corrections. For older, do you want to apply modification and recalculate grades ?"
+Validate copies: "Validate copies"
+Do nothing: "Do nothing for this copies"
