--- a/Resources/translations/icap_dropzone.fr.yml
+++ b/Resources/translations/icap_dropzone.fr.yml
@@ -319,3 +319,5 @@ copy: "copie"
 Report reason: "Raison"
 Reported copy : "Copie signalée"
 Your modifications will only affect new corrections. For older, do you want to apply modification and recalculate grades: "Vos modifications vont affecter seulement les nouvelles corrections. Voulez vous appliquer ces modifications aux corrections déjà créées  et recalculer les notes déjà données ?"
+Validate copies: "Valider les copies"
+Do nothing: "Ne rien faire pour ces copies"
