--- a/Resources/translations/icap_dropzone.fr.yml
+++ b/Resources/translations/icap_dropzone.fr.yml
@@ -325,6 +325,6 @@ Do nothing: "Ne rien faire pour ces copies"
 Help on peerReview mode: "Aide sur le mode d'évaluation par les pairs"
 PeerReview_helper_ideal_case: "Dans le cadre de l'évaluation par les pairs, les répondants se corrigeront de façon totalement <b>autonome seulement dans un cadre idéal </b> où le nombre de participant est égal au nombre de corrections attendues + 1 ou à un multiple de ce nombre."
 PeerReview_helper_ideal_case_example: "Exemple : si on a 2 corrections attendues, l'évaluation sera totalement autonome uniquement dans le cas ou on aura un nombre de participants multiple de 3. ( Eleve 1 corrige 2 et 3 , Eleve 2 corrige 1 et 3, Eleve 3 corrige 1 et 2)."
-PeerReview_helper_other_cases: "Dans les autres cas, <b>le gestionnaire de l'évaluation devra internvenir</b> afin de rajouter la/les corrections manquante lorsque l'évaluation est terminée."
+PeerReview_helper_other_cases: "Dans les autres cas, <b>le gestionnaire de l'évaluation devra intervenir</b> afin de rajouter la/les corrections manquante lorsque l'évaluation est terminée."
 PeerReview_helper_unlock_tool: " Note: Un outil permet aussi au gestionnaire de 'débloquer' une copie si celle ci a déjà reçu au minimum 1 correction (qu'il peut ajouter lui même ). Cela permet d'éviter au gestionnaire, par exemple, de créer toutes les corrections attendues (ex 3 )  si une copie n'en a reçue aucune. Il lui suffira d'en créer une puis de débloquer la copie. Cet outil n'est disponible que lorsque l'évaluation est dans la phase 'terminée'."
 Made by: "Rendue par"
