--- a/Resources/translations/icap_dropzone.en.yml
+++ b/Resources/translations/icap_dropzone.en.yml
@@ -331,3 +331,5 @@ PeerReview_helper_unlock_tool: "Note: an unlock tool is available in order to av
 Made by: "Made by"
 Force comment in correction: "Force comment in correction"
 Please comment: "Please comment"
+This field is required.: "This field is required."
+The comment field is required please let a comment: "The comment field is required, please let a comment"
