base criteria view ( edit mode doesn't work yet )

--- a/Resources/translations/icap_dropzone.en.yml
+++ b/Resources/translations/icap_dropzone.en.yml
@@ -333,3 +333,4 @@ Force comment in correction: "Force comment in correction"
 Please comment: "Please comment"
 This field is required.: "This field is required."
 The comment field is required please let a comment: "The comment field is required, please let a comment"
+Criteria: "Criteria"
