--- a/Resources/translations/icap_dropzone.fr.yml
+++ b/Resources/translations/icap_dropzone.fr.yml
@@ -332,3 +332,4 @@ Force comment in correction: "Rendre le commentaire obligatoire"
 Please comment: "Merci de laisser un commentaire"
 This field is required.: "Ce champs est requis."
 The comment field is required please let a comment: "Le champ commentaire est requis, merci de bien vouloir laisser un commentaire."
+Criteria: "Critère"
