Adding persist cascade on Dropzone entity Adding translation and description on Agenda events. Correcting beug

--- a/Resources/translations/icap_dropzone.en.yml
+++ b/Resources/translations/icap_dropzone.en.yml
@@ -334,3 +334,6 @@ Please comment: "Please comment"
 This field is required.: "This field is required."
 The comment field is required please let a comment: "The comment field is required, please let a comment"
 Criteria: "Criteria"
+Evaluation %dropzonename% opening: "Evaluation %dropzonename% opening"
+Deposit phase of the %dropzonename% evaluation: "Deposit phase of the %dropzonename% evaluation"
+Peer Review is starting in %dropzonename% evaluation: "Peer Review is starting in %dropzonename% Evaluation"
