--- a/Resources/translations/icap_dropzone.fr.yml
+++ b/Resources/translations/icap_dropzone.fr.yml
@@ -333,3 +333,7 @@ Please comment: "Merci de laisser un commentaire"
 This field is required.: "Ce champs est requis."
 The comment field is required please let a comment: "Le champ commentaire est requis, merci de bien vouloir laisser un commentaire."
 Criteria: "Critère"
+Evaluation %dropzonename% opening: "Phase de dépot de l'évaluation  %dropzonename% "
+Deposit phase of the %dropzonename% evaluation: "Phase de dépot de %dropzonename% "
+Peer Review is starting in %dropzonename% evaluation: "Phase de corrections par les pairs de  %dropzonename%"
+
