skin changes and begin of unlock all functionnality

--- a/Resources/translations/icap_dropzone.en.yml
+++ b/Resources/translations/icap_dropzone.en.yml
@@ -340,3 +340,4 @@ Peer Review is starting in %dropzonename% evaluation: "Peer Review is starting i
 unlocked user: "unlocked user"
 unlock user: "unlock user"
 unlock_user_tooltip: "An unlocked user will be able to see his copy without doing the expected correction"
+unlock_all: "unlock all"
