adding cancel unlock button and link and unlock buttons

--- a/Resources/translations/icap_dropzone.en.yml
+++ b/Resources/translations/icap_dropzone.en.yml
@@ -341,3 +341,4 @@ unlocked user: "unlocked user"
 unlock user: "unlock user"
 unlock_user_tooltip: "An unlocked user will be able to see his copy without doing the expected correction"
 unlock_all: "unlock all"
+cancel_unlock: "cancel unlock for all"
