--- a/Resources/translations/icap_dropzone.fr.yml
+++ b/Resources/translations/icap_dropzone.fr.yml
@@ -340,3 +340,4 @@ unlocked user: "utilisateur débloqué"
 unlock user: "débloquer"
 unlock_user_tooltip: "Débloquer un utilisateur lui permetra de voir sa copie sans qu'il ait besoin de faire les corrections requises"
 unlock_all: "débloquer tous "
+cancel_unlock: "annuler le déblocage"
