adding download copies functionnality

--- a/Resources/translations/icap_dropzone.en.yml
+++ b/Resources/translations/icap_dropzone.en.yml
@@ -342,3 +342,4 @@ unlock user: "unlock user"
 unlock_user_tooltip: "An unlocked user will be able to see his copy without doing the expected correction"
 unlock_all: "unlock all"
 cancel_unlock: "cancel unlock for all"
+Download copies: "Download copies"
