adding views for downloading drops during period

--- a/Resources/translations/icap_dropzone.en.yml
+++ b/Resources/translations/icap_dropzone.en.yml
@@ -344,3 +344,10 @@ unlock_all: "unlock all"
 cancel_unlock: "cancel unlock for all"
 Download copies: "Download copies"
 No drops to download: "No copies to download"
+Download all copies: "Download all copies"
+Download between two dates: "Download between two dates"
+Drop period begin date: "Starting date"
+Drop period end date: "End date"
+Select Period: "Select the period"
+Download copies in this period: "Download copies droped during this period"
+No drops to download in this period: "No drops to download in this period"
