--- a/Resources/translations/icap_dropzone.fr.yml
+++ b/Resources/translations/icap_dropzone.fr.yml
@@ -343,3 +343,10 @@ unlock_all: "débloquer tous "
 cancel_unlock: "annuler le déblocage"
 Download copies: "Télécharger les copies"
 No drops to download: "Aucune copie à télécharger"
+Download all copies: "Télécharger toutes les copies"
+Download between two dates: "Télécharger entre deux dates"
+Drop period begin date: "Début"
+Drop period end date: "Fin"
+Select Period: "Sélectionnez une plage de dates"
+Download copies in this period: "Télécharger les copies déposées dans cette periode"
+No drops to download in this period: "Aucune copie téléchargeable durant cette période"
