--- a/Resources/translations/icap_dropzone.en.yml
+++ b/Resources/translations/icap_dropzone.en.yml
@@ -205,7 +205,7 @@ Complete my correction: 'Complete my correction'
 Your copy has been saved: 'Your copy has been saved'
 Comment: 'Comment'
 Would you like to comment?: 'Would you like to comment?'
-Total grade: 'totalGrade'
+Total grade: 'total grade'
 Change scale: 'Change scale'
 common_explication: 'This tool provides a space for students to file documents to be evaluated.<br/>Corrections can be made by teachers, or by students themselves through peer review.<br/>Planning tool allows you to manage the various phases of the evaluation, either manually or automatically by date.'
 criteria_explication: 'Please create here an evaluation form to be completed by the editors.<br/>The number of criteria is not limited.<br/>You can offer a free comment checker.'
